<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_color_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Edit Profile"
                    android:textColor="@color/custom_color_primary"
                    android:textStyle="bold"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp" />

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/custom_color_secondary"
                    android:text="SAVE"
                    android:textSize="16sp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@id/bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/change_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Change Photo"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/custom_color_secondary"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/roleSpinner"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    app:endIconTint="@color/custom_color_primary"
                    app:boxBackgroundColor="@color/custom_color_background"
                    app:boxStrokeColor="@color/custom_color_primary">

                    <AutoCompleteTextView
                        android:id="@+id/status"
                        android:textColor="@color/custom_color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/status"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/full_name"
                    android:hint="@string/full_name"
                    app:met_floatingLabel="normal"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reference_id"
                    android:hint="@string/reference"
                    app:met_floatingLabel="normal"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:hint="@string/username"
                    app:met_floatingLabel="normal"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/specialization"
                    android:hint="@string/specialization"
                    app:met_floatingLabel="normal"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:hint="@string/email"
                    app:met_floatingLabel="normal"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone"
                    android:hint="@string/phone"
                    app:met_floatingLabel="normal"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/qualification"
                    android:hint="@string/qualification"
                    app:met_floatingLabel="normal"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/role"
                    android:hint="@string/role"
                    app:met_floatingLabel="normal"
                    android:editable="false"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>